overflow-error-fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -304,7 +304,7 @@ main {
 }
 
 .sidebar.active { 
-  max-height: 405px; 
+  max-height: 700px; 
 }
 
 .sidebar-info {
